--- a/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
@@ -6,20 +6,43 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Create Game</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <form action="/bjwebapi/CreateGame">
-             Game Name: <input type="text" name="GameName"><br>
-             Comp Players: <input type="text" name="CompPlayersNumber"><br>
-             Human Players: <input type="text" name="HumanPlayers"><br>
-            <input type="submit" value="Submit">
-        </form>
-        <form method="post" action="/bjwebapi/CreateGame" enctype="multipart/form-data">
-            <input type="file" name="XMLFile"><br /><br />
-            <input type="submit" name="submit" value="Submit">
-       </form>
+        <div class="bs-example bs-example-tabs">
+            <ul id="CreateGameTabs" class="nav nav-tabs">
+                <li class>
+                    <a href="#CreateGame" data-toggle="tab">Create Game</a>
+                </li>
+                <li class>
+                    <a href="#LoadGame" data-toggle="tab">Load Game</a>
+                </li>
+            </ul>
+            <div id="CreateGameTabsContent" class="tab-content">
+                <div class="tab-pane fade" id="CreateGame">
+                    <form class="form-signin-heading" action="CreateGame">
+                        
+                        Game Name: <input class="form-control" type="text" name="GameName" autofocus required><br>
+                         Comp Players: <input class="form-control" type="number" name="CompPlayersNumber" required><br>
+                         Human Players: <input class="form-control" type="number" name="HumanPlayers" required><br>
+                         <button class="btn btn-lg btn-primary btn-block" type="submit" >Create</button>
+                        <!-- input type="submit" value="Submit" -->
+                    </form>
+                </div>
+                <div class="tab-pane fade" id="LoadGame">
+                    <form method="post" action="CreateGame" enctype="multipart/form-data">
+                        
+                        <input type="file" class="form-control" name="XMLFile" required><br /><br />
+                        <button class="btn btn-lg btn-primary btn-block" type="submit" >Create</button>
+                        <!-- input type="submit" name="submit" value="Submit" -->
+                   </form>
+                </div>
+            </div>
+       </div>
     </body>
 </html>
