--- a/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
@@ -24,7 +24,7 @@ and open the template in the editor.
                 </li>
             </ul>
             <div id="CreateGameTabsContent" class="tab-content">
-                <div class="tab-pane fade" id="CreateGame">
+                <div class="tab-pane fade container" id="CreateGame">
                     <form class="form-signin-heading" action="CreateGame">
                         
                         Game Name: <input class="form-control" type="text" name="GameName" autofocus required><br>
@@ -34,7 +34,7 @@ and open the template in the editor.
                         <!-- input type="submit" value="Submit" -->
                     </form>
                 </div>
-                <div class="tab-pane fade" id="LoadGame">
+                <div class="tab-pane fade container" id="LoadGame">
                     <form method="post" action="CreateGame" enctype="multipart/form-data">
                         
                         <input type="file" class="form-control" name="XMLFile" required><br /><br />
