--- a/BlackJackWebServer/BlackJackWebApp/web/GameList.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/GameList.html
@@ -12,8 +12,21 @@ and open the template in the editor.
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/GameList.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="container">
+           <table class="table">
+               <thead>
+                    <th>#</th>
+                    <th>Game Name</th>
+                    <th>Human Players</th>
+                    <th>Joined Players</th>
+               </thead>
+               <tbody id="Gamelist">
+                   
+               </tbody>
+           </table>
+        </div>
     </body>
 </html>
