--- a/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/CreateGame.html
@@ -26,17 +26,17 @@ and open the template in the editor.
             <div id="CreateGameTabsContent" class="tab-content">
                 <div class="tab-pane fade container" id="CreateGame">
                     <form class="form-signin-heading" action="CreateGame">
-                        
+                        <input type="hidden" name="tab" value="1" />
                         Game Name: <input class="form-control" type="text" name="GameName" autofocus required><br>
-                         Comp Players: <input class="form-control" type="number" name="CompPlayersNumber"  max="5" value = "1" min="0" required><br>
-                         Human Players: <input class="form-control" type="number" name="HumanPlayers" max="6" value = "1" min="1" required><br>
-                         <button class="btn btn-lg btn-primary btn-block" type="submit" >Create</button>
+                        Comp Players: <input class="form-control" type="number" name="CompPlayersNumber"  max="5" value = "1" min="0" required><br>
+                        Human Players: <input class="form-control" type="number" name="HumanPlayers" max="6" value = "1" min="1" required><br>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit" >Create</button>
                         <!-- input type="submit" value="Submit" -->
                     </form>
                 </div>
                 <div class="tab-pane fade container" id="LoadGame">
                     <form method="post" action="CreateGame" enctype="multipart/form-data">
-                        
+                        <input type="hidden" name="tab" value="0" />
                         <input type="file" class="form-control" name="XMLFile" required><br /><br />
                         <button class="btn btn-lg btn-primary btn-block" type="submit" >Create</button>
                         <!-- input type="submit" name="submit" value="Submit" -->
