--- a/BlackJackWebServer/BlackJackWebApp/web/GameList.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/GameList.html
@@ -16,17 +16,26 @@ and open the template in the editor.
     </head>
     <body>
         <div class="container">
-           <table class="table">
-               <thead>
-                    <th>#</th>
-                    <th>Game Name</th>
-                    <th>Human Players</th>
-                    <th>Joined Players</th>
-               </thead>
-               <tbody id="Gamelist">
-                   
-               </tbody>
-           </table>
+           <div class="panel panel-default">
+                <table class="table">
+                    <thead>
+                         <th>#</th>
+                         <th>Game Name</th>
+                         <th>Human Players</th>
+                         <th>Joined Players</th>
+                    </thead>
+                    <tbody id="Gamelist">
+                    </tbody>
+                </table>
+           </div>
+           <div class="container">
+               <form class="form-signin-heading" >
+                    Player Name: <input class="form-control" id="PlayerName" type="text" name="GameName" autofocus required><br>
+                     <select id="dataCombo" class="selectpicker">
+                     </select>
+                   <button class="btn btn-lg btn-primary btn-block" type="submit" >Join</button>
+               </form>
+           </div>
         </div>
     </body>
 </html>
