--- a/BlackJackWebServer/BlackJackWebApp/web/GameList.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/GameList.html
@@ -29,13 +29,14 @@ and open the template in the editor.
                 </table>
            </div>
            <div class="container">
-               <form class="form-signin-heading" >
-                    Player Name: <input class="form-control" id="PlayerName" type="text" name="GameName" autofocus required><br>
-                     <select id="dataCombo" class="selectpicker">
+               <form class="form-signin-heading" method="post" action="JoinGame">
+                    Player Name: <input class="form-control" id="PlayerName" type="text" name="PlayerNameTxT" autofocus required><br>
+                     <select id="dataCombo" name="PlayerName" class="selectpicker">
                      </select>
+                    <input type="hidden" name="GameName" id="GameName" >
                    <button class="btn btn-lg btn-primary btn-block" type="submit" >Join</button>
                </form>
-           </div>
+          
         </div>
     </body>
 </html>
