--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -15,6 +15,32 @@ and open the template in the editor.
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-       
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-3 col-xs-3"><img src="images/players/Dealer.png"/></div>
+            <div class="col-md-3 col-xs-3"><label>BET 1000</label></div>
+            <div class="col-md-1 col-xs-1"><img  src="images/Cards/10Clubs.png"/></div>
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/2Spades.png"/></div>
+          </div>
+          <div class="row">
+              <div class="col-md-3 col-xs-3"><label>MONEY 1000</label></div>
+              <div class="col-md-3 col-xs-3"><label>BET 1000</label></div>
+            
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/10Clubs.png"/></div>
+            <div class="col-md-1 col-xs-1"><img  src="images/Cards/2Spades.png"/></div>
+          </div>
+          <div class="row">
+              <div class="col-md-1 col-xs-1"><img src="images/players/CompPlayer.png"/></div>
+                <div class="col-md-1 col-xs-1"><label>BET 1000</label></div>
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/10Clubs.png"/></div>
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/2Spades.png"/></div>
+          </div>
+          <div class="row">
+              <div class="col-md-1 col-xs-1"><label>MONEY 1000</label></div>
+            <div class="col-md-1 col-xs-1"><label>BET 1000</label></div>
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/10Clubs.png"/></div>
+            <div class="col-md-1 col-xs-1"><img src="images/Cards/2Spades.png"/></div>
+          </div>
+          <div class="row">
     </body>
 </html>
