--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>BlackJack!!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@ and open the template in the editor.
             <div id="gamePlayers">
              <div class="row" id="Dealer">
                <div class="col-md-1 col-xs-1"><img src="images/players/Dealer.png"/></div>
-               <div class="Cards">
+               <div class="Cards" id="DealerCards">
                     <div class="col-md-1 col-xs-1">
                         <img class="TENCLUBS" />
                     </div>
