--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -48,6 +48,11 @@ and open the template in the editor.
              <div id="Deck" class="row">
                  <img src="images/Background/Deck.png" />
              </div>
+             <div class="progress">
+                <div id="ValuePrg" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                    <span  class="sr-only">40</span>
+                </div>
+             </div>
              <div class="row">
                 <form id="PlaceBetfrm" class="form-signin-heading" method="post" action="PlayerActions" Hidden>
                        Place Bet: <input class="form-control" name="PlaceBet" id="PlaceBet" type="range" min="1" max="1000" autofocus ><br>
