--- a/BlackJackWebServer/BlackJackWebApp/web/JoinOrCreateGame.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/JoinOrCreateGame.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>GameOver</title>
+        <title>Join Or Create</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,6 +14,11 @@ and open the template in the editor.
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div><h1>GameOver</h1></div>
+        <form class="form-signin-heading" method="post" action="CreateGame.html">
+                      <button class="btn btn-lg btn-primary btn-block" type="submit" >Create Game</button>
+        </form>
+        <form class="form-signin-heading" method="post" action="GameList.html">
+                      <button class="btn btn-lg btn-primary btn-block" type="submit" >Join Game</button>
+        </form>
     </body>
 </html>
