--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -43,7 +43,9 @@ and open the template in the editor.
         </div>
         <div  class="col-md-3 col-xs-3" id ="BetValue">
              <div class="row">
-                <button type="button" class="btn btn-warning" id="btnResign">Resign</button>
+                 <form id="Resign" class="form-signin-heading" method="post" action="PlayerResign">
+                    <button class="btn btn-warning" id="btnResign" type="submit">Resign</button>
+                 </form>
              </div>
              <div id="Deck" class="row">
                  <img src="images/Background/Deck.png" />
