--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -81,6 +81,11 @@ and open the template in the editor.
                 </form>
 
              </div>
+             <div id="Error" class="row" Hidden>
+                <div class="alert alert-danger alert-dismissable">
+                  <strong id="errormessage">Error!</strong> 
+                </div>
+             </div>
             </div>
         
        </div>
