--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -20,7 +20,7 @@ and open the template in the editor.
          <div class="col-md-8 col-xs-8">
             <div id="gamePlayers">
              <div class="row" id="Dealer">
-               <div class="col-md-1 col-xs-1"><img src="images/players/Dealer.png"/></div>
+               <div class="col-md-1 col-xs-1"><img class="img-responsive" src="images/players/Dealer.png"/></div>
                <div class="Cards" id="DealerCards">
                    
                </div>
