--- a/BlackJackWebServer/BlackJackWebApp/web/GameOver.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/GameOver.html
@@ -14,6 +14,8 @@ and open the template in the editor.
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div><h1>GameOver</h1></div>
+        <div><h1>GameOver</h1>
+            <a href="LoginPage.html">Back to Login</a>
+        </div>
     </body>
 </html>
