--- a/BlackJackWebServer/BlackJackWebApp/web/Game.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/Game.html
@@ -20,7 +20,7 @@ and open the template in the editor.
          <div class="col-md-8 col-xs-8">
             <div id="gamePlayers">
              <div class="row" id="Dealer">
-               <div class="col-md-1 col-xs-1"><img class="img-responsive" src="images/players/Dealer.png"/>
+                 <div class="col-md-1 col-xs-1"><img class="img-responsive" src="images/players/Dealer.png" style="min-width: 70px; min-height: 70px"/>
                </div>
                <div class="Cards" id="DealerCards">                  
                </div>
@@ -29,8 +29,8 @@ and open the template in the editor.
                <div class="row">
                    <div class="col-md-1 col-xs-1"><img src="images/players/CompPlayer.png"/></div>
                      <div class="col-md-1 col-xs-1"><label>BET 1000</label></div>
-                 <div class="col-md-1 col-xs-1"><img src="images/Cards/10Clubs.png"/></div>
-                 <div class="col-md-1 col-xs-1"><img src="images/Cards/2Spades.png"/></div>
+                 <div class="col-md-1 col-xs-1"><img class="TENCLUBS"/></div>
+                 <div class="col-md-1 col-xs-1"><img class="TENCLUBS"/></div>
                </div>
                <div class="row">
                    <div class="col-md-1 col-xs-1"><label>MONEY 1000</label></div>
@@ -48,7 +48,7 @@ and open the template in the editor.
                  </form>
              </div>
              <div id="Deck" class="row">
-                 <img src="images/Background/Deck.png" />
+                 <img class="img-responsive" src="images/Background/Deck2.png" />
              </div>
              <div class="progress">
                 <div id="ValuePrg" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
