--- a/BlackJackWebServer/BlackJackWebApp/web/GameOver.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/GameOver.html
@@ -10,12 +10,13 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/GameOver.css" rel="stylesheet">
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div><h1>GameOver</h1>
-            <a href="LoginPage.html">Back to Login</a>
+        <div ><h1 class="heading">Game Over</h1>
+            <a class="link" href="LoginPage.html">Back to Login</a>
         </div>
     </body>
 </html>
