--- a/BlackJackWebServer/BlackJackWebApp/web/JoinOrCreateGame.html
+++ b/BlackJackWebServer/BlackJackWebApp/web/JoinOrCreateGame.html
@@ -10,15 +10,23 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/JoinOrCreateGame.css" rel="stylesheet">
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <form class="form-signin-heading" method="post" action="CreateGame.html">
-                      <button class="btn btn-lg btn-primary btn-block" type="submit" >Create Game</button>
-        </form>
-        <form class="form-signin-heading" method="post" action="GameList.html">
-                      <button class="btn btn-lg btn-primary btn-block" type="submit" >Join Game</button>
-        </form>
+        <div class="container buttonHolder">
+            <h1 class="heading">Lets Play</h1>
+            <div class="col-xs-6">
+            <form class="form-signin-heading spacer" method="post" action="CreateGame.html">
+                          <button class="button btn btn-lg btn-primary " type="submit" >Create Game</button>
+            </form>
+            </div>
+            <div class="col-xs-6">
+            <form class="form-signin-headin spacer" method="post" action="GameList.html">
+                          <button class="button btn btn-lg btn-primary" type="submit" >Join Game</button>
+            </form>
+            </div>
+        </div>
     </body>
 </html>
